Updated error visualization for the atlas

--- a/in_development/edward/alignment-error-visualization.ipynb
+++ b/in_development/edward/alignment-error-visualization.ipynb
@@ -48,21 +48,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "299762ca",
    "metadata": {},
    "outputs": [],
    "source": [
     "from library.controller.sql_controller import SqlController\n",
     "from library.image_manipulation.filelocation_manager import FileLocationManager\n",
-    "from library.atlas.atlas_utilities import compute_affine_transformation, get_affine_transformation, list_coms\n",
+    "from library.atlas.atlas_utilities import apply_affine_transform, get_affine_transformation, list_coms\n",
     "\n",
     "from library.utilities.utilities_process import M_UM_SCALE, SCALING_FACTOR, random_string, read_image, write_image\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "6342efe3-8054-4acd-9dc6-8a5d22d87ba3",
    "metadata": {},
    "outputs": [],
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "397b771f-50da-4219-992e-0d7d0b96b0a0",
    "metadata": {},
    "outputs": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "id": "8860c495",
    "metadata": {},
    "outputs": [
@@ -138,8 +138,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "id": "07f38b87",
+   "execution_count": 6,
+   "id": "9480a5ce",
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 7,
    "id": "9d3a9a9a",
    "metadata": {},
    "outputs": [
@@ -445,7 +445,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -458,308 +458,6 @@
     "df.sort_values(by=['structure'], inplace=True)\n",
     "from IPython.display import HTML\n",
     "HTML(df.to_html(index=False))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "327f59c4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def prepare_table(brains, person_id, input_type_id, save_path):\n",
-    "    df_save = prepare_table_for_save(\n",
-    "        brains,\n",
-    "        person_id=person_id,\n",
-    "        input_type_id=input_type_id\n",
-    "    )\n",
-    "    df_save.to_csv(save_path, index=False)\n",
-    "    \n",
-    "    df = prepare_table_for_plot(\n",
-    "        brains,\n",
-    "        person_id=person_id,\n",
-    "        input_type_id=input_type_id\n",
-    "    )\n",
-    "\n",
-    "    return df_save, df\n",
-    "\n",
-    "def get_brain_coms(brains, person_id, input_type_id):\n",
-    "    brain_coms = {}\n",
-    "    for brain in brains:\n",
-    "        brain_coms[brain] = query_brain_coms(\n",
-    "            brain,\n",
-    "            person_id=person_id,\n",
-    "            input_type_id=input_type_id\n",
-    "        )\n",
-    "        # A temporary hack: for ('DK55', corrected), use ('DK55', aligned)\n",
-    "        if (brain, input_type_id) == ('DK55', 2):\n",
-    "            brain_coms[brain] = query_brain_coms(\n",
-    "                brain,\n",
-    "                person_id=person_id,\n",
-    "                input_type_id=4\n",
-    "            )\n",
-    "    return brain_coms\n",
-    "\n",
-    "def prepare_table_for_save(brains, person_id, input_type_id):\n",
-    "    brain_coms = get_brain_coms(brains, person_id, input_type_id)\n",
-    "\n",
-    "    data = {}\n",
-    "    data['name'] = []\n",
-    "    for s in common_structures:\n",
-    "        for c in ['dx', 'dy', 'dz', 'dist']:\n",
-    "            data['name'] += [f'{s}_{c}']\n",
-    "    for brain in brain_coms.keys():\n",
-    "        data[brain] = []\n",
-    "        offset = [brain_coms[brain][s] - atlas_coms[s]\n",
-    "                  if s in brain_coms[brain] else [np.nan, np.nan, np.nan]\n",
-    "                  for s in common_structures]\n",
-    "        offset = np.array(offset)\n",
-    "        scale = np.array([10, 10, 20])\n",
-    "        dx, dy, dz = (offset * scale).T\n",
-    "        dist = np.sqrt(dx * dx + dy * dy + dz * dz)\n",
-    "        for dx_i, dy_i, dz_i, dist_i in zip(dx, dy, dz, dist):\n",
-    "            data[brain] += [dx_i, dy_i, dz_i, dist_i]\n",
-    "    df = pd.DataFrame(data)\n",
-    "\n",
-    "    return df\n",
-    "\n",
-    "def prepare_table_for_plot(brains, person_id, input_type_id):\n",
-    "    brain_coms = get_brain_coms(brains, person_id, input_type_id)\n",
-    "\n",
-    "    df = pd.DataFrame()\n",
-    "    for brain in brain_coms.keys():\n",
-    "        offset = [brain_coms[brain][s] - atlas_coms[s]\n",
-    "                  if s in brain_coms[brain] else [np.nan, np.nan, np.nan]\n",
-    "                  for s in common_structures]\n",
-    "        offset = np.array(offset)\n",
-    "        scale = np.array([10, 10, 20])\n",
-    "        dx, dy, dz = (offset * scale).T\n",
-    "        dist = np.sqrt(dx * dx + dy * dy + dz * dz)\n",
-    "\n",
-    "        df_brain = pd.DataFrame()\n",
-    "\n",
-    "        data = {}\n",
-    "        data['structure'] = common_structures\n",
-    "        data['value'] = dx\n",
-    "        data['type'] = 'dx'\n",
-    "        df_brain = df_brain.append(pd.DataFrame(data), ignore_index=True)\n",
-    "\n",
-    "        data = {}\n",
-    "        data['structure'] = common_structures\n",
-    "        data['value'] = dy\n",
-    "        data['type'] = 'dy'\n",
-    "        df_brain = df_brain.append(pd.DataFrame(data), ignore_index=True)\n",
-    "\n",
-    "        data = {}\n",
-    "        data['structure'] = common_structures\n",
-    "        data['value'] = dz\n",
-    "        data['type'] = 'dz'\n",
-    "        df_brain = df_brain.append(pd.DataFrame(data), ignore_index=True)\n",
-    "\n",
-    "        data = {}\n",
-    "        data['structure'] = common_structures\n",
-    "        data['value'] = dist\n",
-    "        data['type'] = 'dist'\n",
-    "        df_brain = df_brain.append(pd.DataFrame(data), ignore_index=True)\n",
-    "\n",
-    "        df_brain['brain'] = brain\n",
-    "        df = df.append(df_brain, ignore_index=True)\n",
-    "    return df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "32e9b799-b0f7-4bf3-9768-cf4c5db960f6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def plot(df, ymin, ymax, ystep, title):\n",
-    "    fig, ax = plt.subplots(2, 1, figsize=(16, 12), dpi=200)\n",
-    "    \n",
-    "    sns.boxplot(ax=ax[0], x=\"structure\", y=\"value\", hue=\"type\", data=df)\n",
-    "    ax[0].xaxis.grid(True)\n",
-    "    ax[0].set_xlabel('Structure')\n",
-    "    ax[0].set_ylabel('um')\n",
-    "    ax[0].set_title('full dynamic range')\n",
-    "    \n",
-    "    sns.boxplot(ax=ax[1], x=\"structure\", y=\"value\", hue=\"type\", data=df)\n",
-    "    ax[1].xaxis.grid(True)\n",
-    "    ax[1].set_ylim(ymin, ymax)\n",
-    "    ax[1].yaxis.set_ticks(np.arange(ymin, ymax + 1, ystep))\n",
-    "    ax[0].set_xlabel('Structure')\n",
-    "    ax[1].set_ylabel('um')\n",
-    "    ax[1].set_title('zoom in')\n",
-    "    \n",
-    "    fig.suptitle(title, y=0.92)\n",
-    "    plt.show()\n",
-    "    return fig\n",
-    "\n",
-    "figs = []"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a021b972",
-   "metadata": {},
-   "source": [
-    "## Rigid Alignment Error\n",
-    "\n",
-    "Rigid alignment error is computed as follows:\n",
-    "1. Anotomist manually annotate the COMs for each brain.\n",
-    "2. Computer finds the best transformation between atlas COMs and **anotomist's manual COMs**. The transformation is restricted to rigid + uniform scaling.\n",
-    "3. Using the transformation, the **anotomist's manual COMs** are brought to the atlas space.\n",
-    "4. The errors between the 2 sets of COMs are calculated, and displayed in the following plots.\n",
-    "\n",
-    "The errors for a single structure are quantified by 4 numbers: dx, dy, dz, dist. (dx, dy, dz) are the offset. dist is the corresponding distance of the offset."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f7b078e6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "brain_coms = get_brain_coms(brains_to_examine,person_id=28,\n",
-    "    input_type_id=4)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ee68c20f-5af1-430d-a347-6ed2954d568e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# person is bili, input_type is aligned\n",
-    "df_save, df = prepare_table(\n",
-    "    brains_to_examine,\n",
-    "    person_id=28,\n",
-    "    input_type_id=4,\n",
-    "    save_path='../data/rigid-alignment-error.csv'\n",
-    ")\n",
-    "df_save.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "daf2cb73-f780-4a26-8a97-b147faa40d99",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "fig = plot(df, -1000, 1000, 100, 'Rigid Alignment Error')\n",
-    "figs.append(fig)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "89baf1fe-8eca-47b7-9648-303a25087ea5",
-   "metadata": {},
-   "source": [
-    "## Rigid Alignment Error After Correction\n",
-    "\n",
-    "After reviewing the rigid alignment error plots, Beth manually re-annotatted the significant outliers as a correction. With this updated data, we compute the alignment error again using the same method."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5ffc08f3-cee9-4e5e-abcb-eaa917224434",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# person is bili, input_type is corrected\n",
-    "df_save, df = prepare_table(\n",
-    "    brains_to_examine,\n",
-    "    person_id=28,\n",
-    "    input_type_id=2,\n",
-    "    save_path='../data/rigid-alignment-error-after-correction.csv'\n",
-    ")\n",
-    "df_save.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5f283a84-572e-4814-9dc1-e75314222e2f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig = plot(df, -1000, 1000, 100, 'Rigid Alignment Error After Correction')\n",
-    "figs.append(fig)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b47847d1",
-   "metadata": {},
-   "source": [
-    "## Rough Alignment Error\n",
-    "\n",
-    "**Rough alignment** is an **automatic method** to find the best 3D affine transformation between 2 brains, solely based on the thumbnail-resolution gray value images. Rough alignment is planned to be the first step of an automatic pipeline, which defines the starting points for Kui's automatic detection method.\n",
-    "\n",
-    "We start with an anotomist manually annotate the COMs extensively for one brain (DK52).\n",
-    "\n",
-    "Rough alignment error is computed as follows:\n",
-    "1. Computer finds the best 3D affine transformation between DK52 and the brain, as determined by aligning the gray value images.\n",
-    "2. Using the transformation, the DK52 COMs are brought to that brain's space. And we call it the **rough COMs** of the brain.\n",
-    "3. Computer finds the best transformation between atlas COMs and **rough COMs**. The transformation is restricted to rigid + uniform scaling.\n",
-    "4. Using the transformation, the **rough COMs** are brought to the atlas space.\n",
-    "5. The errors between the 2 sets of COMs are calculated, and displayed in the following plots.\n",
-    "\n",
-    "The errors for a single structure are quantified by 4 numbers: dx, dy, dz, dist. (dx, dy, dz) are the offset. dist is the corresponding distance of the offset."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7d501178-b8c8-4f97-a180-a4cbab24e66f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# person is ed, input_type is aligned\n",
-    "df_save, df = prepare_table(\n",
-    "    brains_to_examine,\n",
-    "    person_id=1,\n",
-    "    input_type_id=4,\n",
-    "    save_path='../data/rough-alignment-error.csv'\n",
-    ")\n",
-    "df_save.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c42f5165-b897-4be6-9f97-a3d35b51d3cb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig = plot(df, -1000, 1000, 100, 'Rough Alignment Error')\n",
-    "figs.append(fig)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a4c16da1-ec3f-4d28-a553-98285383940a",
-   "metadata": {},
-   "source": [
-    "## Generate Report"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d34d3bf4-a147-4816-afcc-959cc4850421",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with PdfPages('../data/alignment-error.pdf') as pdf:\n",
-    "    for fig in figs:\n",
-    "        pdf.savefig(fig)"
    ]
   }
  ],
