Working on finding the best combo to create an affine transformation for the atlas

--- a/src/atlas/notebooks/allen.atlas.comparison.ipynb
+++ b/src/atlas/notebooks/allen.atlas.comparison.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/eddyod/programming/pipeline/src\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import sys\n",
@@ -28,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,9 +76,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "reflection detected\n",
+      "n=37, min=5.8685464056759306e-05 max=0.0008149574071899496, mean=0.00034455265476870115\n"
+     ]
+    }
+   ],
    "source": [
     "testing_structures = {'PBG_R', '3N_L', 'PBG_L', '4N_L', '4N_R', '3N_R'}\n",
     "common_keys = sorted(allen_coms.keys() & moving_coms.keys() & testing_structures)\n",
@@ -91,9 +108,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 9 µs, sys: 2 µs, total: 11 µs\n",
+      "Wall time: 13.6 µs\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "combos = list(powerset(testing_structures))"
@@ -101,9 +127,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "reflection detected\n",
+      "('PBG_L', '3N_L', '3N_R', 'PBG_R', '4N_L', '4N_R') 0.0\n"
+     ]
+    }
+   ],
    "source": [
     "means = {}\n",
     "for i, combo in enumerate(combos):\n",
@@ -130,9 +165,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((6, 3), (6, 3))"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "allen_points = np.array([allen_coms[p] for p in testing_structures])\n",
     "moving_points = np.array([moving_coms[p] for p in testing_structures])\n",
@@ -141,9 +187,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "reflection detected\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.00029594],\n",
+       "       [-0.00053124],\n",
+       "       [-0.00077586]])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "R, t = umeyama(moving_points.T, allen_points.T)\n",
     "t"
@@ -151,9 +217,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "n=37, min=5.868546405675832e-05 max=0.0008149574071899471, mean=0.00034455265476870023\n",
+      "SC 0.0 (array([0., 0., 0.]), 'X')\n",
+      "6N_R 0.0 (array([0., 0., 0.]), 'X')\n",
+      "6N_L 0.0 (array([0., 0., 0.]), 'X')\n",
+      "3N_L 0.0 (array([0., 0., 0.]), 'X')\n",
+      "3N_R 0.0 (array([0., 0., 0.]), 'X')\n",
+      "IC 0.0 (array([0., 0., 0.]), 'X')\n",
+      "4N_L 0.0 (array([0., 0., 0.]), 'X')\n",
+      "4N_R 0.0 (array([0., 0., 0.]), 'X')\n",
+      "5N_R 0.0 (array([0., 0., 0.]), 'X')\n",
+      "5N_L 0.0 (array([0., 0., 0.]), 'X')\n",
+      "LC_L 0.0 (array([0., 0., 0.]), 'X')\n",
+      "LC_R 0.0 (array([0., 0., 0.]), 'X')\n",
+      "PBG_L 0.0 (array([0., 0., 0.]), 'X')\n",
+      "PBG_R 0.0 (array([0., 0., 0.]), 'X')\n",
+      "7n_L 0.0 (array([0., 0., 0.]), 'X')\n",
+      "7n_R 0.0 (array([0., 0., 0.]), 'X')\n",
+      "VLL_L 0.0 (array([0., 0., 0.]), 'X')\n",
+      "VLL_R 0.0 (array([0., 0., 0.]), 'X')\n",
+      "SNR_R 0.0 (array([0., 0., 0.]), 'X')\n",
+      "SNR_L 0.0 (array([0., 0., 0.]), 'X')\n",
+      "Amb_R 0.0 (array([0., 0., 0.]), 'X')\n",
+      "Amb_L 0.0 (array([0., 0., 0.]), 'X')\n",
+      "SNC_L 0.0 (array([0., 0., 0.]), 'X')\n",
+      "SNC_R 0.0 (array([0., 0., 0.]), 'X')\n",
+      "7N_R 0.0 (array([0., 0., 0.]), 'X')\n",
+      "7N_L 0.0 (array([0., 0., 0.]), 'X')\n",
+      "AP 0.0 (array([0., 0., 0.]), 'X')\n",
+      "LRt_R 0.0 (array([0., 0., 0.]), 'X')\n",
+      "RtTg 0.0 (array([0., 0., 0.]), 'X')\n",
+      "LRt_L 0.0 (array([0., 0., 0.]), 'X')\n",
+      "DC_R 0.0 (array([0., 0., 0.]), 'X')\n",
+      "DC_L 0.0 (array([0., 0., 0.]), 'X')\n",
+      "Sp5I_R 0.0 (array([0., 0., 0.]), 'X')\n",
+      "Sp5I_L 0.0 (array([0., 0., 0.]), 'X')\n",
+      "Sp5O_R 0.0 (array([0., 0., 0.]), 'X')\n",
+      "Sp5O_L 0.0 (array([0., 0., 0.]), 'X')\n",
+      "Sp5C_L 0.0 (array([0., 0., 0.]), 'X')\n"
+     ]
+    }
+   ],
    "source": [
     "distances = []\n",
     "sortme = {}\n",
@@ -479,7 +590,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
