Added multi processing to find combo

--- a/in_development/edward/alignment-error-visualization.ipynb
+++ b/in_development/edward/alignment-error-visualization.ipynb
@@ -128,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "d4de7897",
+   "id": "0264ec2b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "5219b221",
+   "id": "c7d33a05",
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +203,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "432e8a3a",
+   "id": "7bf90e63",
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 84,
    "id": "8860c495",
    "metadata": {},
    "outputs": [
@@ -235,13 +235,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SS 1027.22206210659\n"
+      "SS 2742.442448651634\n"
      ]
     }
    ],
    "source": [
     "df_list = []\n",
-    "ckeys_single = ('Sp5I_R', 'SNC_R', 'LRt_R', '4N_L', 'SNC_L')\n",
+    "ckeys_single = ('IC', 'AP', 'LRt_R', '7N_L')\n",
     "atlas_src = np.array([atlas_structures[s] for s in ckeys_single])\n",
     "allen_src = np.array([allen_structures[s] for s in ckeys_single])\n",
     "#matrix = get_umeyama(atlas_src, allen_src)\n",
@@ -602,29 +602,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
-   "id": "75183e2e",
+   "execution_count": 79,
+   "id": "b546be67",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "37"
+       "['3N_L',\n",
+       " '3N_R',\n",
+       " '4N_L',\n",
+       " '4N_R',\n",
+       " '5N_L',\n",
+       " '5N_R',\n",
+       " '6N_L',\n",
+       " '6N_R',\n",
+       " '7N_L',\n",
+       " '7N_R',\n",
+       " '7n_L',\n",
+       " '7n_R',\n",
+       " 'AP',\n",
+       " 'Amb_L',\n",
+       " 'Amb_R',\n",
+       " 'DC_L',\n",
+       " 'DC_R',\n",
+       " 'IC',\n",
+       " 'LC_L',\n",
+       " 'LC_R',\n",
+       " 'LRt_L',\n",
+       " 'LRt_R',\n",
+       " 'PBG_L',\n",
+       " 'PBG_R',\n",
+       " 'RtTg',\n",
+       " 'SC',\n",
+       " 'SNC_L',\n",
+       " 'SNC_R',\n",
+       " 'SNR_L',\n",
+       " 'SNR_R',\n",
+       " 'Sp5C_L',\n",
+       " 'Sp5I_L',\n",
+       " 'Sp5I_R',\n",
+       " 'Sp5O_L',\n",
+       " 'Sp5O_R',\n",
+       " 'VLL_L',\n",
+       " 'VLL_R']"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(common_keys)"
+    "sorted(common_keys)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "270190f9",
+   "id": "d44db85b",
    "metadata": {},
    "outputs": [
     {
