Updated the atlas error notebook and got the create atlas working well

--- a/src/atlas/notebooks/alignment-error-visualization.ipynb
+++ b/src/atlas/notebooks/alignment-error-visualization.ipynb
@@ -12,10 +12,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "116fa24e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/eddyod/programming/pipeline/src\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import sys\n",
@@ -28,14 +36,14 @@
     "from itertools import combinations\n",
     "\n",
     "PIPELINE_ROOT = Path('./').absolute().parents[1]\n",
-    "PIPELINE_ROOT = PIPELINE_ROOT.as_posix() + '/src'\n",
+    "PIPELINE_ROOT = PIPELINE_ROOT.as_posix()\n",
     "sys.path.append(PIPELINE_ROOT)\n",
     "print(PIPELINE_ROOT)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "299762ca",
    "metadata": {},
    "outputs": [],
@@ -43,44 +51,16 @@
     "from library.controller.sql_controller import SqlController\n",
     "from library.image_manipulation.filelocation_manager import FileLocationManager\n",
     "from library.atlas.atlas_utilities import apply_affine_transform, get_affine_transformation, list_coms, \\\n",
-    "    compute_affine_transformation\n",
+    "    compute_affine_transformation, compute_affine_transformation_centroid\n",
     "from library.registration.brain_structure_manager import BrainStructureManager\n",
     "from library.registration.algorithm import umeyama\n",
-    "\n",
-    "\n",
-    "\n",
-    "from library.utilities.utilities_process import M_UM_SCALE, SCALING_FACTOR, random_string, read_image, write_image\n"
+    "from library.utilities.utilities_process import M_UM_SCALE, SCALING_FACTOR, random_string, \\\n",
+    "read_image, write_image\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f1582c49",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "animal = 'Allen'\n",
-    "um = 10\n",
-    "affine = False\n",
-    "debug = False\n",
-    "brainManager = BrainStructureManager(animal, um, affine, debug)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "92f446a1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "structure = 'SC'\n",
-    "com = np.array([926, 183, 572])\n",
-    "brainManager.update_database_com(structure, com)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "6342efe3-8054-4acd-9dc6-8a5d22d87ba3",
    "metadata": {},
    "outputs": [],
@@ -119,106 +99,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "b6548580",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "37\n"
+     ]
+    }
+   ],
    "source": [
     "atlas_all = list_coms('Atlas')\n",
     "allen_all = list_coms('Allen')\n",
     "common_keys = list(atlas_all.keys() & allen_all.keys())\n",
     "atlas_common = np.array([atlas_all[s] for s in common_keys])\n",
-    "allen_common = np.array([allen_all[s] for s in common_keys])\n"
+    "allen_common = np.array([allen_all[s] for s in common_keys])\n",
+    "print(len(common_keys))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "19ab72cc",
+   "execution_count": 12,
+   "id": "faf3c333",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "10\n",
+      "2\n",
+      "35\n",
+      "37\n"
+     ]
+    }
+   ],
+   "source": [
+    "base_keys = ['LRt_L', 'LRt_R', 'SC', 'SNC_R', 'SNC_L']\n",
+    "test_keys = ['PBG_L', 'PBG_R', 'SC', 'IC', '4N_L', '4N_R', 'LRt_L','LRt_R', 'SNC_L', 'SNC_R', ]\n",
+    "bad_keys = ['RtTg','AP']\n",
+    "good_keys = set(common_keys) - set(bad_keys)\n",
+    "print(len(base_keys))\n",
+    "print(len(test_keys))\n",
+    "print(len(bad_keys))\n",
+    "print(len(good_keys))\n",
+    "print(len(common_keys))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "226924b6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "combinations_list = generate_combinations(common_keys)\n",
-    "print(len(combinations_list))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f44ad938",
-   "metadata": {},
-   "source": [
-    "## Data Collection"
+    "atlas_src = np.array([atlas_all[s] for s in base_keys])\n",
+    "allen_src = np.array([allen_all[s] for s in base_keys])\n",
+    "matrix = compute_affine_transformation(atlas_src, allen_src)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "397b771f-50da-4219-992e-0d7d0b96b0a0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "error = {}\n",
-    "\n",
-    "for combo in combinations_list[:3000]:\n",
-    "    atlas_src = np.array([atlas_all[s] for s in combo])\n",
-    "    allen_src = np.array([allen_all[s] for s in combo])\n",
-    "    df_list = []\n",
-    "    sss = []\n",
-    "    matrix = compute_affine_transformation(atlas_src, allen_src)\n",
-    "    for structure in common_keys:\n",
-    "        atlas0 = np.array(atlas_all[structure])\n",
-    "        allen0 = np.array(allen_all[structure]) \n",
-    "        transformed = apply_affine_transform(atlas0, matrix)\n",
-    "        transformed = [round(x,8) for x in transformed]\n",
-    "        difference = [round(a - b, 8) for a, b in zip(transformed, allen0)]\n",
-    "        ss = sum_square_com(difference)\n",
-    "        row = [structure, atlas0, allen0, transformed, difference, ss]\n",
-    "        df_list.append(row)\n",
-    "        sss.append(ss)\n",
-    "    error[combo] = sum(sss)\n",
-    "\n",
-    "\n",
-    "\n",
-    "sorted_combos = {k: v for k, v in sorted(error.items(), key=lambda item: item[1])}\n",
-    "result = list(sorted_combos.items())[:5]\n",
-    "    \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0b251ae6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "result"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "8860c495",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RMS 25.602246865972344\n"
+     ]
+    }
+   ],
    "source": [
     "df_list = []\n",
-    "ckeys_single = ('IC', 'AP', 'LRt_R', '7N_L')\n",
-    "atlas_src = np.array([atlas_structures[s] for s in ckeys_single])\n",
-    "allen_src = np.array([allen_structures[s] for s in ckeys_single])\n",
-    "#matrix = get_umeyama(atlas_src, allen_src)\n",
-    "matrix = compute_affine_transformation(atlas_src, allen_src)\n",
     "error = []\n",
     "for structure in common_keys:\n",
     "    atlas0 = np.array(atlas_all[structure])\n",
     "    allen0 = np.array(allen_all[structure]) \n",
     "    transformed = apply_affine_transform(atlas0, matrix)\n",
-    "    transformed = [round(x,2) for x in transformed]\n",
-    "    difference = [round(a - b, 2) for a, b in zip(transformed, allen0)]\n",
+    "    transformed = [round(x,4) for x in transformed]\n",
+    "    difference = [round(a - b,4) for a, b in zip(transformed, allen0)]\n",
     "    ss = sum_square_com(difference)\n",
     "    row = [structure, atlas0, allen0, transformed, difference, ss]\n",
     "    df_list.append(row)\n",
     "    error.append(ss)\n",
-    "print('SS', sum(error))"
+    "print('RMS', sum(error)/len(df_list))\n",
+    "# test keys RMS 25.61709479307028\n",
+    "# base keys RMS 25.602246865972344"
    ]
   },
   {
@@ -232,7 +205,6 @@
    "source": [
     "columns = ['structure', 'atlas0', 'allen0', 'transformed', 'difference', 'sumsquares']\n",
     "df = pd.DataFrame(df_list, columns=columns)\n",
-    "columns = ['atlas0', 'allen0', 'transformed', 'difference', 'sumsquares']\n",
     "df.index.name = 'Index'\n",
     "df.sort_values(by=['structure'], inplace=True)\n",
     "HTML(df.to_html(index=False))"
@@ -245,7 +217,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sorted(common_keys)"
+    "df['sumsquares'].sum()/len(df.index)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1bbbeb9a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "949.4215777978649/len(df.index)"
    ]
   },
   {
@@ -255,11 +237,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "counter = 1\n",
-    "for L in range(3, 10):\n",
-    "    for subset in combinations(common_keys, L):\n",
-    "        counter += 1\n",
-    "print(counter)"
+    "df_list = []\n",
+    "atlas_src = np.array([atlas_all[s] for s in remaining_keys])\n",
+    "for structure in remaining_keys:\n",
+    "    atlas0 = np.array(atlas_all[structure])\n",
+    "    allen0 = 0\n",
+    "    transformed = apply_affine_transform(atlas0, matrix)\n",
+    "    transformed = [round(x,2) for x in transformed]\n",
+    "    difference = 0\n",
+    "    ss = 0\n",
+    "    row = [structure, atlas0, allen0, transformed, difference, ss]\n",
+    "    df_list.append(row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c1cbb293",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "columns = ['structure', 'atlas0', 'allen0', 'transformed', 'difference', 'sumsquares']\n",
+    "df = pd.DataFrame(df_list, columns=columns)\n",
+    "df.index.name = 'Index'\n",
+    "df.sort_values(by=['structure'], inplace=True)\n",
+    "HTML(df.to_html(index=False))"
    ]
   }
  ],
